fixing scroll, projects spacing

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ button {
 .about {
     height: 82vh;
     padding-left: 5.5%;
-    padding-right: 5%;
+    padding-right: 3%;
     padding-top: 2vh;
 }
 
@@ -119,7 +119,7 @@ button {
     float: left;
     text-align: left;
     padding-left: 3%;
-    flex-grow: 1;
+    padding-right: 2%;
     overflow: scroll;
 }
 
@@ -206,7 +206,6 @@ button {
 }
 
 .row {
-    padding-bottom: 3vh;
 }
 
 .left {
@@ -214,6 +213,7 @@ button {
     position: relative;
     float: left;
     margin-right: 3%;
+    margin-bottom: 4.5vh;
 }
 
 .center {
@@ -221,12 +221,14 @@ button {
     position: relative;
     float: left;
     margin-right: 3%;
+    margin-bottom: 4.5vh;
 }
 
 .right {
     width: 27%;
     position: relative;
     float: left;
+    margin-bottom: 4.5vh;
 }
 
 .scroll {
